fixed bug where the featured post wouldn't show on firefox for desktop

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -565,8 +565,7 @@ a.dropdown-toggle {
       transform: translate(-50%, -50%);
       min-width: 100%; }
   .featured .home-search {
-    height: 100%;
-    max-height: 100%;
+    height: auto;
     margin-bottom: 40px; }
   .featured .featured-post-wrap {
     margin: 0 auto;
