--- a/resources/assets/sass/includes/_posts.sass
+++ b/resources/assets/sass/includes/_posts.sass
@@ -34,8 +34,7 @@
       min-width: 100%
 
   .home-search
-    height: 100%
-    max-height: 100%
+    height: auto
     margin-bottom: 40px
 
   .featured-post-wrap
